[gd_scene load_steps=54 format=3 uid="uid://8irx3hteoscs"]

[ext_resource type="Script" path="res://scripts/actors/player/player.gd" id="1_ofun5"]
[ext_resource type="PackedScene" uid="uid://d28t0wg27a16n" path="res://scenes/footstep_manager.tscn" id="2_jfnmd"]
[ext_resource type="Texture2D" uid="uid://dbe7x31yen82r" path="res://assets/textures/placeholders/Crosshair.png" id="3_lncxe"]
[ext_resource type="Script" path="res://scripts/actors/player/pain_overlay.gd" id="3_sb5h5"]
[ext_resource type="Shader" path="res://assets/shaders/player_hurt.gdshader" id="4_ic7pp"]
[ext_resource type="AudioStream" uid="uid://btjqho8haln6v" path="res://assets/sound/jump/jump_1.wav" id="6_023kn"]
[ext_resource type="Script" path="res://scripts/health_bar.gd" id="6_qb662"]
[ext_resource type="PackedScene" uid="uid://b4u15tgrq5xnn" path="res://addons/teeb.text_transitions/demo/RichTextLabel.tscn" id="6_yqgsy"]
[ext_resource type="AudioStream" uid="uid://3saq0pvp2tjq" path="res://assets/sound/jump/jump_2.wav" id="7_fqu3h"]
[ext_resource type="AudioStream" uid="uid://bj78f7coyppsi" path="res://assets/sound/jump/jump_3.wav" id="8_c6fha"]
[ext_resource type="AudioStream" uid="uid://os5dd3e2hdcs" path="res://assets/sound/land/land_dirt_1.wav" id="9_xpmhq"]
[ext_resource type="AudioStream" uid="uid://dc6lb27wv5ujt" path="res://assets/sound/land/land_dirt_2.wav" id="10_s57sg"]
[ext_resource type="AudioStream" uid="uid://cxwkvq23b8g03" path="res://assets/sound/land/land_dirt_3.wav" id="11_tpysq"]
[ext_resource type="Script" path="res://scripts/actors/player/jump_manager.gd" id="11_wrmtl"]
[ext_resource type="AudioStream" uid="uid://cd1i5asyektem" path="res://assets/sound/ui/select.wav" id="13_k5rga"]
[ext_resource type="AudioStream" uid="uid://dpbfqj4a2u5kb" path="res://assets/sound/ui/deselect.wav" id="14_sk8eb"]
[ext_resource type="Script" path="res://scripts/actors/player/fall_manager.gd" id="15_28cwi"]
[ext_resource type="AudioStream" uid="uid://c4spwu607si03" path="res://assets/sound/ui/pickup.wav" id="15_c7phk"]
[ext_resource type="Script" path="res://scripts/actors/player/impact_manager.gd" id="16_rehmw"]
[ext_resource type="Script" path="res://scripts/item_handler.gd" id="18_de2ym"]
[ext_resource type="Script" path="res://scripts/camera_area_node.gd" id="18_rkygt"]
[ext_resource type="Script" path="res://scripts/actors/player/air_jump_manager.gd" id="19_dpiyr"]
[ext_resource type="AudioStream" uid="uid://debfexgpfvkkh" path="res://assets/sound/wind/lightwoosh.mp3" id="21_5hor6"]
[ext_resource type="Script" path="res://scripts/actors/player/winds.gd" id="21_qfmak"]
[ext_resource type="AudioStream" uid="uid://c41ohkw7a0ou8" path="res://assets/sound/wind/mediumwoosh.mp3" id="22_l6gyh"]
[ext_resource type="AudioStream" uid="uid://d4cqa0t2sury8" path="res://assets/sound/wind/hardwoosh.mp3" id="23_rh2mc"]
[ext_resource type="Resource" uid="uid://x5212svphmcn" path="res://assets/stats/player_stats.tres" id="25_sf4nw"]
[ext_resource type="Script" path="res://scripts/actors/player/particle_manager.gd" id="26_orxw3"]
[ext_resource type="Texture2D" uid="uid://cf221y2im0n0w" path="res://assets/textures/crosshair/crosshair_line.png" id="28_ltgbb"]
[ext_resource type="Script" path="res://scripts/actors/player/player_camera.gd" id="32_v2y8q"]
[ext_resource type="Script" path="res://scripts/actors/player/interact_ray.gd" id="33_5i7nl"]
[ext_resource type="Script" path="res://scripts/actors/health_component.gd" id="34_wnaph"]
[ext_resource type="Script" path="res://scripts/actors/player/crosshair.gd" id="35_uddtv"]
[ext_resource type="Script" path="res://scripts/actors/effect_handler.gd" id="36_o3yx2"]
[ext_resource type="Script" path="res://scripts/actors/hurtbox.gd" id="38_575n3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dvq17"]
radius = 0.313

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1dtyr"]
shader = ExtResource("4_ic7pp")
shader_parameter/alpha = 0.275
shader_parameter/inner_radius = 0.51
shader_parameter/outer_radius = 1.16
shader_parameter/color = Vector3(1, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_br80i"]
bg_color = Color(4.04298e-06, 0.752914, 0.918004, 1)

[sub_resource type="Theme" id="Theme_o1nxc"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_br80i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rgxw"]
bg_color = Color(2.5028e-06, 0.628118, 0.872716, 1)
corner_radius_top_left = 70

[sub_resource type="Theme" id="Theme_ublct"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_1rgxw")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_doc4n"]
random_pitch = 1.32
random_volume_offset_db = 0.26
streams_count = 1
stream_0/stream = ExtResource("8_c6fha")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vsuup"]
random_pitch = 1.42
streams_count = 3
stream_0/stream = ExtResource("9_xpmhq")
stream_0/weight = 1.0
stream_1/stream = ExtResource("10_s57sg")
stream_1/weight = 1.0
stream_2/stream = ExtResource("11_tpysq")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_eysho"]
streams_count = 2
stream_0/stream = ExtResource("6_023kn")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_fqu3h")
stream_1/weight = 1.0

[sub_resource type="GDScript" id="GDScript_siqm4"]
resource_name = "DamageSound"
script/source = "extends AudioStreamPlayer

func _on_hurtbox_damage_taken(_damage: int, _entity: Hitbox, _effects: Array[EffectBase]) -> void:
	play()
"

[sub_resource type="Curve" id="Curve_k8f07"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.213235, 0.593407), 0.0249083, 0.0249083, 0, 0, Vector2(0.683824, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_6gi60"]
_data = [Vector2(0.139706, 0), 0.0, 0.0, 0, 0, Vector2(0.573529, 1), 0.0, 0.0, 0, 0, Vector2(0.867647, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -10.2124, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_3lasq"]
_data = [Vector2(0.816176, 0), 0.0, 0.10675, 0, 0, Vector2(1, 0.626374), 7.47252, 0.0, 0, 0]
point_count = 2

[sub_resource type="QuadMesh" id="QuadMesh_nycmx"]
flip_faces = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_th68v"]
radius = 0.134
height = 1.227

[sub_resource type="FastNoiseLite" id="FastNoiseLite_v7gtj"]
noise_type = 0
frequency = 0.0301
fractal_octaves = 10
fractal_lacunarity = 3.135
domain_warp_amplitude = 6.02

[sub_resource type="SphereShape3D" id="SphereShape3D_fb77q"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_1tl87"]
exposure_multiplier = 0.679

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("player_camera", "item_handler")]
collision_layer = 4
collision_mask = 5
floor_constant_speed = true
floor_max_angle = 0.404916
floor_snap_length = 1.0
script = ExtResource("1_ofun5")
player_camera = NodePath("CameraTraumaNode/PanNode/PlayerCamera")
item_handler = NodePath("Handlers/ItemHandler")
auto_jump = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dvq17")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Pain" type="ColorRect" parent="HUD" node_paths=PackedStringArray("health_component")]
self_modulate = Color(1, 0.21, 0.21, 1)
material = SubResource("ShaderMaterial_1dtyr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_sb5h5")
health_component = NodePath("../../Handlers/HealthComponent")

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Pain"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3625
anchor_top = 0.475926
anchor_right = 0.638542
anchor_bottom = 0.556481
offset_right = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="HUD"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lncxe")
stretch_mode = 3

[node name="HealthBar" type="ProgressBar" parent="HUD" node_paths=PackedStringArray("health_component")]
anchors_preset = -1
anchor_left = 0.4
anchor_right = 0.602604
anchor_bottom = 0.025
grow_horizontal = 2
theme = SubResource("Theme_o1nxc")
max_value = 3.0
show_percentage = false
script = ExtResource("6_qb662")
health_component = NodePath("../../Handlers/HealthComponent")
intensity = 4
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" parent="HUD/HealthBar" instance=ExtResource("6_yqgsy")]
z_index = 90
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
text = "[center][bounce]asdf"

[node name="HealthBar2" type="ProgressBar" parent="HUD"]
anchors_preset = -1
anchor_left = 0.4
anchor_right = 0.602604
anchor_bottom = 0.025
grow_horizontal = 2
theme = SubResource("Theme_ublct")
max_value = 3.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HUD"]
offset_right = 954.0
offset_bottom = 23.0
autowrap_mode = 3

[node name="Select" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource("13_k5rga")

[node name="Deselect" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource("14_sk8eb")

[node name="PickUp" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource("15_c7phk")

[node name="Sounds" type="Node" parent="."]

[node name="FootstepManager" parent="Sounds" node_paths=PackedStringArray("parent") instance=ExtResource("2_jfnmd")]
parent = NodePath("../..")

[node name="GroundJumpManager" type="AudioStreamPlayer" parent="Sounds" node_paths=PackedStringArray("player")]
stream = SubResource("AudioStreamRandomizer_doc4n")
script = ExtResource("11_wrmtl")
player = NodePath("../..")

[node name="FallManager" type="AudioStreamPlayer" parent="Sounds" node_paths=PackedStringArray("player")]
stream = SubResource("AudioStreamRandomizer_vsuup")
script = ExtResource("15_28cwi")
player = NodePath("../..")

[node name="ImpactManager" type="AudioStreamPlayer" parent="Sounds" node_paths=PackedStringArray("player")]
script = ExtResource("16_rehmw")
player = NodePath("../..")

[node name="AirJumpManager" type="AudioStreamPlayer" parent="Sounds" node_paths=PackedStringArray("player")]
stream = SubResource("AudioStreamRandomizer_eysho")
script = ExtResource("19_dpiyr")
player = NodePath("../..")

[node name="DamageSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("13_k5rga")
script = SubResource("GDScript_siqm4")

[node name="Winds" type="Node" parent="Sounds" node_paths=PackedStringArray("player")]
script = ExtResource("21_qfmak")
player = NodePath("../..")
light = SubResource("Curve_k8f07")
medium = SubResource("Curve_6gi60")
hard = SubResource("Curve_3lasq")

[node name="LightWoosh" type="AudioStreamPlayer" parent="Sounds/Winds"]
stream = ExtResource("21_5hor6")
volume_db = -80.0
autoplay = true

[node name="MediumWoosh" type="AudioStreamPlayer" parent="Sounds/Winds"]
stream = ExtResource("22_l6gyh")
volume_db = -80.0
autoplay = true
bus = &"MediumWind"

[node name="HardWoosh" type="AudioStreamPlayer" parent="Sounds/Winds"]
stream = ExtResource("23_rh2mc")
volume_db = -80.0
autoplay = true
bus = &"HeavyWind"

[node name="Handlers" type="Node" parent="."]

[node name="HealthComponent" type="Node" parent="Handlers" node_paths=PackedStringArray("hurtbox")]
script = ExtResource("34_wnaph")
max_health = 20
invuln_time = 0.0
hurtbox = NodePath("../../Hurtbox")

[node name="ParticleManager" type="Node3D" parent="Handlers"]
script = ExtResource("26_orxw3")

[node name="EffectHandler" type="Node" parent="Handlers" node_paths=PackedStringArray("hurtbox", "parent", "health_component")]
script = ExtResource("36_o3yx2")
hurtbox = NodePath("../../Hurtbox")
parent = NodePath("../..")
health_component = NodePath("../HealthComponent")

[node name="ItemHandler" type="Node" parent="Handlers" node_paths=PackedStringArray("parent", "effect_handler")]
script = ExtResource("18_de2ym")
base_stats = ExtResource("25_sf4nw")
parent = NodePath("../..")
effect_handler = NodePath("../EffectHandler")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.665)
visible = false
mesh = SubResource("QuadMesh_nycmx")
skeleton = NodePath("")

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 65536
script = ExtResource("38_575n3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_th68v")

[node name="CameraTraumaNode" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource("18_rkygt")
trauma_noise = SubResource("FastNoiseLite_v7gtj")
noise_speed = 20.0
max_x = 20.0
max_y = 20.0
max_z = 10.0

[node name="CameraTraumaShape" type="CollisionShape3D" parent="CameraTraumaNode"]
shape = SubResource("SphereShape3D_fb77q")

[node name="PanNode" type="Node3D" parent="CameraTraumaNode"]

[node name="PlayerCamera" type="Camera3D" parent="CameraTraumaNode/PanNode" node_paths=PackedStringArray("parent", "pan_node")]
attributes = SubResource("CameraAttributesPractical_1tl87")
current = true
script = ExtResource("32_v2y8q")
parent = NodePath("../../..")
pan_node = NodePath("..")
movement_tilt = 0.18
camera_tilt = 0.5
sensitivity = 7.0
y_offset = 0.5

[node name="InteractRay" type="RayCast3D" parent="CameraTraumaNode/PanNode/PlayerCamera" node_paths=PackedStringArray("interact_label", "interact_cursor", "crosshair")]
visible = false
target_position = Vector3(0, 0, -2.5)
script = ExtResource("33_5i7nl")
interact_label = NodePath("../../../../InteractLabel")
interact_cursor = NodePath("../../../../Crosshair")
crosshair = NodePath("../../../../HUD/TextureRect")

[node name="InteractLabel" type="Label3D" parent="."]
top_level = true
billboard = 1
no_depth_test = true

[node name="Crosshair" type="Node3D" parent="."]
top_level = true
script = ExtResource("35_uddtv")

[node name="Sprite3D" type="Sprite3D" parent="Crosshair"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
cast_shadow = 0
ignore_occlusion_culling = true
modulate = Color(0, 0, 0, 1)
billboard = 1
shaded = true
no_depth_test = true
alpha_antialiasing_mode = 1
texture_filter = 0
texture = ExtResource("28_ltgbb")

[node name="Sprite3D2" type="Sprite3D" parent="Crosshair"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 90)
billboard = 1
shaded = true
no_depth_test = true
texture = ExtResource("28_ltgbb")

[node name="Sprite3D3" type="Sprite3D" parent="Crosshair"]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)
billboard = 1
shaded = true
no_depth_test = true
texture = ExtResource("28_ltgbb")

[node name="Sprite3D4" type="Sprite3D" parent="Crosshair"]
transform = Transform3D(1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0, 1, 0, 0, 0)
billboard = 1
shaded = true
no_depth_test = true
texture = ExtResource("28_ltgbb")

[node name="RayCast3D" type="RayCast3D" parent="."]
top_level = true

[connection signal="dead" from="Handlers/HealthComponent" to="." method="_on_health_component_dead"]
[connection signal="health_changed" from="Handlers/HealthComponent" to="HUD/HealthBar" method="_on_health_component_health_changed"]
[connection signal="damage_taken" from="Hurtbox" to="HUD/Pain" method="_on_hurtbox_damage_taken"]
[connection signal="damage_taken" from="Hurtbox" to="Sounds/DamageSound" method="_on_hurtbox_damage_taken"]
